<resources>
    <string name="app_name">YourAppName</string>
    <string name="text_yeu_cau_ket_qua">Yêu cầu kết quả</string>
    <string name="text_nhap_a">Nhập A:</string>
    <string name="text_nhap_b">Nhập B:</string>
    <string name="text_ket_qua">Kết quả:</string>
    <string name="button_yeu_cau_ket_qua">Yêu cầu kết quả</string>
    <string name="text_xu_ly_ket_qua">Xử lý kết quả</string>
    <string name="text_nhan_a">Nhân A:</string>
    <string name="text_nhan_b">Nhận B:</string>
    <string name="button_tra_ve_tong">Trả về tổng</string>
    <string name="button_tra_ve_hieu">Trả về hiệu</string>

</resources>
